// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatMessageAvatar renders correctly isNotMe 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "marginVertical": 4,
        "opacity": 1,
        "paddingRight": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "center",
            "borderRadius": 12,
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
          {
            "backgroundColor": "#2B78EE",
          },
          undefined,
          {
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            undefined,
          ]
        }
      >
        ИП
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "maxWidth": "90%",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderBottomLeftRadius": 0,
          "borderBottomRightRadius": 10,
          "borderRadius": 10,
          "marginVertical": 4,
        }
      }
    >
      <View
        style={
          {
            "paddingBottom": 4,
            "paddingHorizontal": 10,
            "paddingTop": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#353A45",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "lineHeight": 16,
                "minHeight": 16,
              },
              undefined,
            ]
          }
        >
          message
        </Text>
      </View>
      <View
        style={
          {
            "alignSelf": "flex-end",
            "paddingBottom": 8,
            "paddingHorizontal": 6,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#9BA1B0",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "lineHeight": 14,
                "minHeight": 14,
              },
              undefined,
            ]
          }
        >
          12:12
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessageAvatar renders correctly onPress 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "marginVertical": 4,
        "opacity": 1,
        "paddingRight": 8,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "center",
            "borderRadius": 12,
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
          {
            "backgroundColor": "#2B78EE",
          },
          undefined,
          {
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 10,
              "lineHeight": 14,
              "minHeight": 14,
            },
            undefined,
          ]
        }
      >
        ИП
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignSelf": "flex-end",
        "flexDirection": "row",
        "maxWidth": "90%",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#2B78EE",
          "borderBottomLeftRadius": 10,
          "borderBottomRightRadius": 0,
          "borderRadius": 10,
          "marginVertical": 4,
        }
      }
    >
      <View
        style={
          {
            "paddingBottom": 4,
            "paddingHorizontal": 10,
            "paddingTop": 8,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Inter-Regular",
                "fontSize": 12,
                "lineHeight": 16,
                "minHeight": 16,
              },
              undefined,
            ]
          }
        >
          message
        </Text>
      </View>
      <View
        style={
          {
            "alignSelf": "flex-end",
            "paddingBottom": 8,
            "paddingHorizontal": 6,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 0.8)",
                "fontFamily": "Inter-Regular",
                "fontSize": 10,
                "lineHeight": 14,
                "minHeight": 14,
              },
              undefined,
            ]
          }
        >
          12:12
        </Text>
      </View>
    </View>
  </View>
</View>
`;
